@@ -5,4 +5,5 @@ AM_CFLAGS = -Wall -Wstrict-aliasing=2 -pedantic
 lib_LIBRARIES = libwinstorecompat.a
 
 libwinstorecompat_a_SOURCES = \
-  src/CreateEventW.c
+  src/CreateEventW.c \
+  src/CreateMutexW.c
